security(jca): ask only providers that could implement the interface
The search asks each provider offering the algorithm to translate the
caller's private key, and every provider it asks is shown that key. A
provider whose module cannot read sun.security.util can never return an
InternalPrivateKey, so asking it is exposure bought for nothing.

The filter reads the module graph rather than naming modules or testing
the class loader. The class loader is the wrong question: of the nine
modules java.base exports sun.security.util to, two are boot-loaded, six
are platform-loaded and one is loaded by the application loader, so a
boot-loader test would exclude seven modules the JDK explicitly permits,
including the one hosting SunPKCS11. Reading the graph also stays correct
if the export list changes, and lets a deployer who has opened the
package with --add-exports have their own provider take part.

A candidate list that ends up empty is reported as the algorithm being
unavailable, which is what it is, rather than as an unusable key.

ForeignPrivateKey runs twice. Without the export, a class-path provider
is never handed the private key for either encoding. With it, the same
provider is handed the key for the version 1 encoding, because it could
have answered, and still not for version 2, because nothing is asked
when the public key is already there.

Refs: TASK-00094, ADR-00007